# TransPhaser

./: .gitignore  CHANGELOG.md  CODE_REVIEW_FINDINGS.md  README.md  TEST_STATUS.md  blueprint.md  description.md  pyproject.toml  requirements.txt  run_em_dataset2.py
Manuscript/: README.md  main.tex  presentation.Rmd  presentation.html  presentation_notes.md
Manuscript/bib/: references.bib
Manuscript/figures/: generate_transphaser_architecture.py
comprehensive_output/: comprehensive_evaluation_report.md  predictions_with_imputation.csv  synthetic_genotypes_unphased_missing.csv  synthetic_haplotypes_phased.csv
examples/: README.md  frequency_prediction_experiment_corrected.py  generate_realistic_age_data.py  generate_realistic_data.py  generate_synthetic_data.py  plot_experiments_comparison.py  run_phaser_example.ipynb  run_phaser_example.py  train_comprehensive.py  train_one_pop.py  transphaser_simulation.py
examples/data/: new_samples_unphased.csv  realistic_data_stats.json  realistic_genotypes_unphased.csv  tuning_genotypes.csv  (+8 more)
src/: autoregressive.py  checkpoint.py  compatibility.py  config.py  data_preprocessing.py  decoder.py  embeddings.py  encoder.py  evaluation.py  latent_space.py  loss.py  missing_data.py  model.py  runner.py  samplers.py  trainer.py
tests/: test_autoregressive.py  test_beagle_runner.py  test_compatibility.py  test_config.py  test_data_preprocessing.py  test_decoder.py  test_em.py  test_embeddings.py  test_encoder.py  test_evaluation.py  test_integration.py  test_latent_space.py  test_loss.py  test_missing_data.py  test_model.py  test_performance_reporter.py  test_persistence.py  test_posterior.py  test_result_formatter.py  test_runner.py  test_samplers.py  test_trainer.py
transphaser/: __init__.py  autoregressive.py  beagle_runner.py  compatibility.py  config.py  data_preprocessing.py  decoder.py  em.py  embeddings.py  encoder.py  evaluation.py  latent_space.py  loss.py  missing_data.py  model.py  performance_reporter.py  posterior.py  result_formatter.py  runner.py  samplers.py  trainer.py
(+11 files in other folders)
